Fix pagination with dynamic set retrieval

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -5,7 +5,7 @@
 // load the main theme color variables
 @import 'theme/colors';
 // tune the theme by selecting the main theme color
-@import 'theme/tune/blue';
+@import 'theme/tune/lime';
 // load the theme variables so they can be applied to the components
 @import 'theme/variables';
 // load the components
