--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,7 @@
 button,
 input[type="submit"] {
   -webkit-font-smoothing: antialiased;
-  background-color: #477DCA;
+  background-color: #477dca;
   border-radius: 0.1875em;
   color: white;
   display: inline-block;
@@ -18,7 +18,7 @@ input[type="submit"] {
 body {
   -webkit-font-smoothing: antialiased;
   background-color: white;
-  color: #333;
+  color: #333333;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
   line-height: 1.5; }
@@ -54,7 +54,7 @@ a {
   -webkit-transition: color 0.1s linear;
   -moz-transition: color 0.1s linear;
   transition: color 0.1s linear;
-  color: #477DCA;
+  color: #477dca;
   text-decoration: none; }
   a:hover {
     color: #2c5999; }
@@ -63,7 +63,7 @@ a {
     outline: none; }
 
 hr {
-  border-bottom: 1px solid #DDD;
+  border-bottom: 1px solid #dddddd;
   border-left: none;
   border-right: none;
   border-top: none;
@@ -74,7 +74,7 @@ img {
   max-width: 100%; }
 
 blockquote {
-  border-left: 2px solid #DDD;
+  border-left: 2px solid #dddddd;
   color: #595959;
   margin: 1.5em 0;
   padding-left: 0.75em; }
@@ -87,7 +87,7 @@ cite {
 
 fieldset {
   background: #f7f7f7;
-  border: 1px solid #DDD;
+  border: 1px solid #dddddd;
   margin: 0 0 0.75em 0;
   padding: 1.5em; }
 
@@ -117,7 +117,7 @@ select[multiple=multiple] {
   transition: border-color;
   background-color: white;
   border-radius: 0.1875em;
-  border: 1px solid #DDD;
+  border: 1px solid #dddddd;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
@@ -131,7 +131,7 @@ select[multiple=multiple] {
   textarea:focus,
   input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus,
   select[multiple=multiple]:focus {
-    border-color: #477DCA;
+    border-color: #477dca;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(55, 112, 192, 0.7);
     outline: none; }
 
@@ -172,7 +172,7 @@ th {
   text-align: left; }
 
 td {
-  border-bottom: 1px solid #DDD;
+  border-bottom: 1px solid #dddddd;
   padding: 0.75em 0; }
 
 tr, td, th {
@@ -210,7 +210,7 @@ input[type="submit"] {
 
 .progress-bar {
   background-color: #f2f2f2;
-  border: 1px solid #DDD;
+  border: 1px solid #dddddd;
   box-shadow: inset 0 0 3px 0 rgba(115, 115, 115, 0.15);
   border-radius: 0.1875em;
   height: 30px;
@@ -224,12 +224,12 @@ input[type="submit"] {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background-color: #049cdb;
+    background-color: #beca68;
     background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%);
     background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%);
     background-size: 40px 40px;
     background-repeat: repeat-x;
-    border: 1px solid #036690;
+    border: 1px solid #9caa3c;
     border-radius: 0.125em;
     display: block;
     height: 100%;
@@ -238,26 +238,31 @@ input[type="submit"] {
 @-webkit-keyframes progress {
   0% {
     background-position: 0 0; }
+
   100% {
     background-position: 40px 0; } }
 @-moz-keyframes progress {
   0% {
     background-position: 0 0; }
+
   100% {
     background-position: 40px 0; } }
 @-ms-keyframes progress {
   0% {
     background-position: 0 0; }
+
   100% {
     background-position: 40px 0; } }
 @-o-keyframes progress {
   0% {
     background-position: 0 0; }
+
   100% {
     background-position: 40px 0; } }
 @keyframes progress {
   0% {
     background-position: 0 0; }
+
   100% {
     background-position: 40px 0; } }
 .select .select-dropdown li.active:after {
@@ -286,7 +291,7 @@ input[type="submit"] {
     margin-bottom: 0.22222em; }
     .intro h1 i {
       margin-right: .25em;
-      color: #049cdb; }
+      color: #beca68; }
   .intro h2 {
     font-size: 2.5em;
     margin-bottom: 0.83333em; }
@@ -328,7 +333,7 @@ input[type="submit"] {
 body {
   margin: 0;
   background-color: #e6e6e6;
-  color: #333; }
+  color: #333333; }
   body h1,
   body h2,
   body h3,
@@ -348,7 +353,7 @@ div.layout {
     z-index: 10000; }
     div.layout > header .title,
     div.layout > header .search {
-      color: #DDD;
+      color: #dddddd;
       font-size: 2em;
       position: relative;
       float: left; }
@@ -379,11 +384,11 @@ div.layout {
         background: none;
         border: 0;
         box-shadow: none;
-        color: #DDD;
+        color: #dddddd;
         border-radius: 0; }
         div.layout > header .search input:-webkit-autofill {
           -webkit-box-shadow: 0 0 0 50px #1a1a1a inset;
-          -webkit-text-fill-color: #DDD; }
+          -webkit-text-fill-color: #dddddd; }
   div.layout > aside,
   div.layout > .main {
     top: 4em; }
@@ -416,10 +421,10 @@ div.layout {
         div.layout > aside .modules li:hover {
           cursor: pointer;
           background: #666666;
-          color: #fff; }
+          color: white; }
         div.layout > aside .modules li.active {
-          background: #000;
-          color: #049cdb; }
+          background: black;
+          color: #beca68; }
         div.layout > aside .modules li i.reporter:before {
           content: '\f0f6'; }
         div.layout > aside .modules li i.runner:before {
@@ -442,13 +447,13 @@ div.layout {
         display: table;
         clear: both; }
       div.layout > aside .sections li:hover, div.layout > aside .sections li.active {
-        color: #fff;
+        color: white;
         background-color: #666666; }
       div.layout > aside .sections li:hover {
         cursor: pointer;
         border-color: #aaaaaa; }
       div.layout > aside .sections li.active {
-        border-color: #049cdb; }
+        border-color: #beca68; }
     div.layout > aside h1 {
       font-size: 2em;
       display: block;
@@ -506,8 +511,8 @@ div.layout {
     color: #262626;
     margin-top: 2px; }
     .main-content-list li.cl > div:hover {
-      background: #049cdb;
-      color: #fff; }
+      background: #beca68;
+      color: white; }
     .main-content-list li.cl > div > div.title {
       float: left; }
       .main-content-list li.cl > div > div.title > i {
@@ -532,7 +537,7 @@ div.layout {
       background: #d0d0d0;
       margin-top: 0; }
       .main-content-list > li.cl > div.active, .main-content-list > li.cl > div:hover {
-        background: #049cdb; }
+        background: #beca68; }
       .main-content-list > li.cl > div button,
       .main-content-list > li.cl > div .select button {
         font-size: 1.233em;
@@ -557,7 +562,7 @@ div.layout {
         max-height: 2.77889em;
         background: #eaeaea; }
         .main-content-list > li.cl > ul li.cl > div.active, .main-content-list > li.cl > ul li.cl > div:hover {
-          background: #049cdb; }
+          background: #beca68; }
         .main-content-list > li.cl > ul li.cl > div button,
         .main-content-list > li.cl > ul li.cl > div .select button {
           font-size: 1.1em;
@@ -588,7 +593,7 @@ div.layout {
           padding-top: 1px;
           margin-top: 1px; }
           .main-content-list > li.cl > ul li.cl > ul li.cl > div.active, .main-content-list > li.cl > ul li.cl > ul li.cl > div:hover {
-            background: #049cdb; }
+            background: #beca68; }
           .main-content-list > li.cl > ul li.cl > ul li.cl > div button,
           .main-content-list > li.cl > ul li.cl > ul li.cl > div .select button {
             margin-top: 0.2em; }
@@ -618,15 +623,15 @@ div.layout {
     float: left; }
   .top-filter.active,
   .main-content-list li.cl > div.active {
-    background: #049cdb;
-    color: #fff; }
+    background: #beca68;
+    color: white; }
     .top-filter.active .select button,
     .main-content-list li.cl > div.active .select button {
       background: none;
-      border: #fff 2px solid; }
+      border: white 2px solid; }
       .top-filter.active .select button span,
       .main-content-list li.cl > div.active .select button span {
-        color: #fff; }
+        color: white; }
     .top-filter.active .actions,
     .main-content-list li.cl > div.active .actions {
       opacity: 1;
@@ -634,15 +639,15 @@ div.layout {
       overflow: visible; }
   .top-filter > div .select button,
   .main-content-list li.cl > div > div .select button {
-    background: #DDD;
-    border: #DDD 2px solid;
+    background: #dddddd;
+    border: #dddddd 2px solid;
     padding: 0.25em 0.5em; }
     .top-filter > div .select button span,
     .main-content-list li.cl > div > div .select button span {
-      color: #049cdb; }
+      color: #beca68; }
   .top-filter > div button,
   .main-content-list li.cl > div > div button {
-    background: #333;
+    background: #333333;
     border: none;
     padding: 0.25em 1em; }
     .top-filter > div button span,
@@ -656,7 +661,7 @@ div.layout {
   position: relative; }
   .select button {
     text-align: left;
-    border: #DDD 2px solid;
+    border: #dddddd 2px solid;
     position: relative; }
     .select button.active span {
       min-width: 10em; }
@@ -682,7 +687,7 @@ div.layout {
     font-size: 1.1em;
     left: 0;
     top: 2.67273em;
-    background: #fff;
+    background: white;
     width: 100%;
     padding: 0.4em 0;
     border: #c4c4c4 0.1em solid;
@@ -697,7 +702,7 @@ div.layout {
       text-overflow: ellipsis;
       padding: .3em 1em; }
       .select .select-dropdown li:hover, .select .select-dropdown li.active {
-        color: #049cdb; }
+        color: #beca68; }
       .select .select-dropdown li:hover {
         background: #f2f2f2;
         cursor: pointer; }
@@ -725,11 +730,11 @@ div.layout {
 
 input[type="submit"].primary,
 button.primary {
-  background-color: #049cdb;
-  color: #fff; }
+  background-color: #beca68;
+  color: white; }
   input[type="submit"].primary:hover,
   button.primary:hover {
-    background-color: #0378a9;
+    background-color: #aebd42;
     color: #e6e6e6; }
 input[type="submit"]:disabled,
 button:disabled {
@@ -758,7 +763,7 @@ input.ng-invalid {
   padding: .5em;
   background-color: #ffc40d;
   border-radius: 0.1875em;
-  color: #333; }
+  color: #333333; }
 
 .select button {
   border-radius: .45em; }
@@ -767,7 +772,7 @@ input.ng-invalid {
 .select .select-dropdown {
   border-radius: .3em;
   position: absolute;
-  background: #fff;
+  background: white;
   border: 0.1em solid #c4c4c4; }
   .select .select-dropdown:after, .select .select-dropdown:before {
     bottom: 100%;
@@ -779,7 +784,7 @@ input.ng-invalid {
     pointer-events: none; }
   .select .select-dropdown:after {
     border-color: rgba(119, 100, 213, 0);
-    border-bottom-color: #fff;
+    border-bottom-color: white;
     border-width: 0.5em;
     left: 50%;
     margin-left: -0.5em;
@@ -793,13 +798,13 @@ input.ng-invalid {
     z-index: 2; }
 
 button {
-  background-color: #049cdb;
-  color: #fff; }
+  background-color: #beca68;
+  color: white; }
   button:hover {
-    background-color: #0378a9;
+    background-color: #aebd42;
     color: #e6e6e6; }
   button.secondary {
-    background-color: #333; }
+    background-color: #333333; }
     button.secondary:hover {
       background-color: #1a1a1a; }
 
@@ -971,5 +976,3 @@ input.ng-invalid {
   transition: opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.4s, max-height cubic-bezier(0, 0.6, 0.85, 1) 0.3s; }
   .main-content-list > li.cl > ul li.cl > ul.expand {
     max-height: 1000px; }
-
-/*# sourceMappingURL=main.css.map */
