--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -6,10 +6,10 @@
         <div class="select" filter-select="filter.environments" filter-id="available.filter.env.id"></div>
         <i class="fa fa-folder-open-o" ng-class="{'inactive':available.filter.set.key === null}" ng-click="filter.expand.set = !filter.expand.set" ng-hide="available.filter.env.key === null"></i>
         <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_SET" ng-hide="available.filter.set.key === null && !filter.expand.set"></span>
-        <div class="select" filter-select="filter.sets" filter-id="available.filter.set.id" ng-hide="!filter.expand.set"></div>
+        <div class="select" filter-select="filter.sets" filter-id="available.filter.set.id" ng-hide="available.filter.env.key === null || !filter.expand.set"></div>
         <i class="fa fa-tag" ng-class="{'inactive':available.filter.tag.key === null}" ng-click="filter.expand.tag = !filter.expand.tag" ng-hide="available.filter.env.key === null"></i>
         <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_TAG" ng-hide="available.filter.tag.key === null && !filter.expand.tag"></span>
-        <div class="select" filter-select="filter.tags" filter-id="available.filter.tag.id" ng-hide="!filter.expand.tag"></div>
+        <div class="select" filter-select="filter.tags" filter-id="available.filter.tag.id" ng-hide="available.filter.env.key === null || !filter.expand.tag"></div>
     </div>
     <div class="actions">
         <button>
@@ -66,4 +66,4 @@
         </ul>
     </li>
 </ul>
-<div pagination ng-show="available.storiesLoaded" class="pagination appear-delayed ng-hide" has-next="available.hasMorePages()" current-page="available.currentPage" />
+<div pagination ng-show="available.storiesLoaded" class="pagination appear-delayed ng-hide" has-next="available.hasMorePages()" current-page="available.currentPage" list-ref="available.storyListRef" />
