--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -1,21 +1,20 @@
 <div class="top-filter ic appear-delayed ng-hide filter-2" ng-show="filter.loaded" ng-class="{'active':available.selectedItem === null}" ng-click="available.selectedItem = null" ng-controller="AvailableFilterCtrl as filter">
     <i class="fa fa-bars" ng-click="available.toggleExpand('all')"></i>
     <div class="filters">
-        <i class="fa fa-globe" ng-class="{'inactive':available.filter.env.key === null}"></i>
-        <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_ENVIRONMENT"></span>
-        <div class="select" filter-select="filter.environments" filter-id="available.filter.env.id"></div>
-        <i class="fa fa-folder-open-o" ng-class="{'inactive':available.filter.set.key === null}" ng-click="filter.expand.set = !filter.expand.set" ng-hide="available.filter.env.key === null"></i>
+        <i class="fa fa-folder-open-o" ng-class="{'inactive':available.filter.set.key === null}" ng-click="filter.expand.set = !filter.expand.set"></i>
         <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_SET" ng-hide="available.filter.set.key === null && !filter.expand.set"></span>
-        <div class="select" filter-select="filter.sets" filter-id="available.filter.set.id" ng-hide="available.filter.env.key === null || !filter.expand.set"></div>
-        <i class="fa fa-tag" ng-class="{'inactive':available.filter.tag.key === null}" ng-click="filter.expand.tag = !filter.expand.tag" ng-hide="available.filter.env.key === null"></i>
+        <div class="select" filter-select="filter.sets" filter-id="available.filter.set.id" ng-hide="!filter.expand.set"></div>
+        <i class="fa fa-tag" ng-class="{'inactive':available.filter.tag.key === null}" ng-click="filter.expand.tag = !filter.expand.tag"></i>
         <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_TAG" ng-hide="available.filter.tag.key === null && !filter.expand.tag"></span>
-        <div class="select" filter-select="filter.tags" filter-id="available.filter.tag.id" ng-hide="available.filter.env.key === null || !filter.expand.tag"></div>
+        <div class="select" filter-select="filter.tags" filter-id="available.filter.tag.id" ng-hide="!filter.expand.tag"></div>
     </div>
     <div class="actions">
         <button>
             <i class="fa fa-play"></i>
             <span translate="RUNNER.AVAILABLE.FILTER.RUN_ALL"></span>
         </button>
+        <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_ENVIRONMENT"></span>
+        <div class="select" filter-select="available.environments" filter-id="available.filter.env.id"></div>
     </div>
 </div>
 <span translate="RUNNER.SELECT_ENVIRONMENT" class="hero-notice appear-delayed ng-hide" ng-show="available.loaded && available.filter.env.key === null"></span>
@@ -31,6 +30,8 @@
                     <i class="fa fa-play"></i>
                     <span translate="RUNNER.AVAILABLE.FILTER.RUN"></span>
                 </button>
+                <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_ENVIRONMENT"></span>
+                <div class="select" filter-select="available.environments" filter-id="available.filter.env.id"></div>
             </div>
         </div>
         <ul>
@@ -45,6 +46,8 @@
                             <i class="fa fa-play"></i>
                             <span translate="RUNNER.AVAILABLE.FILTER.RUN"></span>
                         </button>
+                        <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_ENVIRONMENT"></span>
+                        <div class="select" filter-select="available.environments" filter-id="available.filter.env.id"></div>
                     </div>
                 </div>
                 <ul ng-class="{'expand':story.expand === true || expand() === 'book'+book.id || expand() === 'all'}">
@@ -58,6 +61,8 @@
                                     <i class="fa fa-play"></i>
                                     <span translate="RUNNER.AVAILABLE.FILTER.RUN"></span>
                                 </button>
+                                <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_ENVIRONMENT"></span>
+                                <div class="select" filter-select="available.environments" filter-id="available.filter.env.id"></div>
                             </div>
                         </div>
                     </li>
