--- a/app/sass/components/modules/select.scss
+++ b/app/sass/components/modules/select.scss
@@ -1,7 +1,7 @@
 .select {
     position: relative;
 
-    button {
+    > button {
         text-align: left;
         border: $select-list-button-border;
         position: relative;
@@ -45,31 +45,43 @@
             overflow-y: auto;
         }
 
-        li {
+        li:hover,
+        li.active {
+            color: $base-accent-color;
+        }
+
+        li:hover {
+            background: $select-list-hl-bg-color;
+            cursor: pointer;
+        }
+
+        li.active button {
+            padding-right: 2em;
+
+            &:after {
+
+                @extend %icon;
+                line-height: inherit;
+                content: '\f00c';
+                color: $select-list-color;
+                position: absolute;
+                right: 1em;
+            }
+        }
+
+        li button {
+
             @include ellipsis;
+            border: 0;
             padding: .3em 1em;
-
-            &:hover,
-            &.active {
-                color: $base-accent-color;
-            }
-
-            &:hover {
-                background: $select-list-hl-bg-color;
-                cursor: pointer;
-            }
-
-            &.active {
-
-                &:after {
-
-                    @extend %icon;
-                    line-height: inherit;
-                    content: '\f00c';
-                    color: $select-list-color;
-                    float: right;
-                }
-            }
+            margin: 0;
+            color: inherit;
+            font-size: inherit;
+            font-weight: inherit;
+            background: none;
+            width: 100%;
+            text-align: left;
+            line-height: inherit;
         }
     }
 }
