--- a/app/sass/components/modules/top-filter.scss
+++ b/app/sass/components/modules/top-filter.scss
@@ -45,7 +45,7 @@
     }
 
     > div button,
-    > div .select button {
+    > div .select > button {
         font-size: $section-header-font-size - .1;
     }
 
@@ -53,7 +53,7 @@
         margin-top: $filter-button-margin-top;
     }
 
-    > div .select button {
+    > div .select > button {
         margin-top: $filter-select-margin-top;
     }
 
