--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,7 @@
 button,
 input[type="submit"] {
   -webkit-font-smoothing: antialiased;
-  background-color: #477dca;
+  background-color: #477DCA;
   border-radius: 0.1875em;
   color: white;
   display: inline-block;
@@ -18,7 +18,7 @@ input[type="submit"] {
 body {
   -webkit-font-smoothing: antialiased;
   background-color: white;
-  color: #333333;
+  color: #333;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
   line-height: 1.5; }
@@ -54,7 +54,7 @@ a {
   -webkit-transition: color 0.1s linear;
   -moz-transition: color 0.1s linear;
   transition: color 0.1s linear;
-  color: #477dca;
+  color: #477DCA;
   text-decoration: none; }
   a:hover {
     color: #2c5999; }
@@ -63,7 +63,7 @@ a {
     outline: none; }
 
 hr {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDD;
   border-left: none;
   border-right: none;
   border-top: none;
@@ -74,7 +74,7 @@ img {
   max-width: 100%; }
 
 blockquote {
-  border-left: 2px solid #dddddd;
+  border-left: 2px solid #DDD;
   color: #595959;
   margin: 1.5em 0;
   padding-left: 0.75em; }
@@ -87,7 +87,7 @@ cite {
 
 fieldset {
   background: #f7f7f7;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDD;
   margin: 0 0 0.75em 0;
   padding: 1.5em; }
 
@@ -117,7 +117,7 @@ select[multiple=multiple] {
   transition: border-color;
   background-color: white;
   border-radius: 0.1875em;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDD;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
@@ -131,7 +131,7 @@ select[multiple=multiple] {
   textarea:focus,
   input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus,
   select[multiple=multiple]:focus {
-    border-color: #477dca;
+    border-color: #477DCA;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(55, 112, 192, 0.7);
     outline: none; }
 
@@ -172,7 +172,7 @@ th {
   text-align: left; }
 
 td {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDD;
   padding: 0.75em 0; }
 
 tr, td, th {
@@ -210,7 +210,7 @@ input[type="submit"] {
 
 .progress-bar {
   background-color: #f2f2f2;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDD;
   box-shadow: inset 0 0 3px 0 rgba(115, 115, 115, 0.15);
   border-radius: 0.1875em;
   height: 30px;
@@ -238,31 +238,26 @@ input[type="submit"] {
 @-webkit-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @-moz-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @-ms-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @-o-keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 @keyframes progress {
   0% {
     background-position: 0 0; }
-
   100% {
     background-position: 40px 0; } }
 .select .select-dropdown li.active:after {
@@ -333,7 +328,7 @@ input[type="submit"] {
 body {
   margin: 0;
   background-color: #e6e6e6;
-  color: #333333; }
+  color: #333; }
   body h1,
   body h2,
   body h3,
@@ -353,7 +348,7 @@ div.layout {
     z-index: 10000; }
     div.layout > header .title,
     div.layout > header .search {
-      color: #dddddd;
+      color: #DDD;
       font-size: 2em;
       position: relative;
       float: left; }
@@ -384,11 +379,11 @@ div.layout {
         background: none;
         border: 0;
         box-shadow: none;
-        color: #dddddd;
+        color: #DDD;
         border-radius: 0; }
         div.layout > header .search input:-webkit-autofill {
           -webkit-box-shadow: 0 0 0 50px #1a1a1a inset;
-          -webkit-text-fill-color: #dddddd; }
+          -webkit-text-fill-color: #DDD; }
   div.layout > aside,
   div.layout > .main {
     top: 4em; }
@@ -421,9 +416,9 @@ div.layout {
         div.layout > aside .modules li:hover {
           cursor: pointer;
           background: #666666;
-          color: white; }
+          color: #fff; }
         div.layout > aside .modules li.active {
-          background: black;
+          background: #000;
           color: #049cdb; }
         div.layout > aside .modules li i.reporter:before {
           content: '\f0f6'; }
@@ -447,7 +442,7 @@ div.layout {
         display: table;
         clear: both; }
       div.layout > aside .sections li:hover, div.layout > aside .sections li.active {
-        color: white;
+        color: #fff;
         background-color: #666666; }
       div.layout > aside .sections li:hover {
         cursor: pointer;
@@ -512,7 +507,7 @@ div.layout {
     margin-top: 2px; }
     .main-content-list li.cl > div:hover {
       background: #049cdb;
-      color: white; }
+      color: #fff; }
     .main-content-list li.cl > div > div.title {
       float: left; }
       .main-content-list li.cl > div > div.title > i {
@@ -563,7 +558,7 @@ div.layout {
         background: #eaeaea; }
         .main-content-list > li.cl > ul li.cl > div.active, .main-content-list > li.cl > ul li.cl > div:hover {
           background: #049cdb; }
-        .main-content-list > li.cl > ul li.cl > div button,
+        .main-content-list > li.cl > ul li.cl > div > div > button,
         .main-content-list > li.cl > ul li.cl > div .select > button {
           font-size: 1.1em;
           margin-top: 0.27em; }
@@ -594,7 +589,7 @@ div.layout {
           margin-top: 1px; }
           .main-content-list > li.cl > ul li.cl > ul li.cl > div.active, .main-content-list > li.cl > ul li.cl > ul li.cl > div:hover {
             background: #049cdb; }
-          .main-content-list > li.cl > ul li.cl > ul li.cl > div button,
+          .main-content-list > li.cl > ul li.cl > ul li.cl > div > div > button,
           .main-content-list > li.cl > ul li.cl > ul li.cl > div .select > button {
             margin-top: 0.2em; }
           .main-content-list > li.cl > ul li.cl > ul li.cl > div .select > button {
@@ -624,35 +619,37 @@ div.layout {
   .top-filter.active,
   .main-content-list li.cl > div.active {
     background: #049cdb;
-    color: white; }
+    color: #fff; }
     .top-filter.active .select > button,
     .main-content-list li.cl > div.active .select > button {
       background: none;
-      border: white 2px solid; }
+      border: #fff 2px solid; }
       .top-filter.active .select > button span,
       .main-content-list li.cl > div.active .select > button span {
-        color: white; }
+        color: #fff; }
     .top-filter.active .actions,
     .main-content-list li.cl > div.active .actions {
       opacity: 1;
       width: auto;
       overflow: visible; }
+  .top-filter > div > button span,
+  .top-filter > div .select > button span,
+  .main-content-list li.cl > div > div > button span,
+  .main-content-list li.cl > div > div .select > button span {
+    line-height: 1.5em; }
+  .top-filter > div > button,
+  .main-content-list li.cl > div > div > button {
+    background: #333;
+    border: none;
+    padding: 0.25em 1em; }
   .top-filter > div .select > button,
   .main-content-list li.cl > div > div .select > button {
-    background: #dddddd;
-    border: #dddddd 2px solid;
+    background: #DDD;
+    border: #DDD 2px solid;
     padding: 0.25em 0.5em; }
     .top-filter > div .select > button span,
     .main-content-list li.cl > div > div .select > button span {
       color: #049cdb; }
-  .top-filter > div button,
-  .main-content-list li.cl > div > div button {
-    background: #333333;
-    border: none;
-    padding: 0.25em 1em; }
-    .top-filter > div button span,
-    .main-content-list li.cl > div > div button span {
-      line-height: 1.5em; }
   .top-filter > div > button:hover,
   .main-content-list li.cl > div > div > button:hover {
     background: #1a1a1a; }
@@ -661,7 +658,7 @@ div.layout {
   position: relative; }
   .select > button {
     text-align: left;
-    border: #dddddd 2px solid;
+    border: #DDD 2px solid;
     position: relative; }
     .select > button.active span {
       min-width: 10em; }
@@ -687,14 +684,13 @@ div.layout {
     font-size: 1.1em;
     left: 0;
     top: 2.67273em;
-    background: white;
+    background: #fff;
     width: 100%;
     padding: 0.4em 0;
     border: #c4c4c4 0.1em solid;
     z-index: 2; }
-    .select .select-dropdown ul {
-      max-height: 12em;
-      overflow-y: auto; }
+    .select .select-dropdown.paginated {
+      padding: 0; }
     .select .select-dropdown li {
       display: block;
       overflow: hidden;
@@ -716,6 +712,15 @@ div.layout {
           color: #666666;
           position: absolute;
           right: 1em; }
+    .select .select-dropdown button {
+      background: none;
+      color: #666666;
+      width: 100%;
+      padding: 0;
+      margin: -0.4em 0;
+      border-radius: 0; }
+      .select .select-dropdown button:hover {
+        background: #e6e6e6; }
 
 .hero-notice {
   width: 100%;
@@ -736,7 +741,7 @@ div.layout {
 input[type="submit"].primary,
 button.primary {
   background-color: #049cdb;
-  color: white; }
+  color: #fff; }
   input[type="submit"].primary:hover,
   button.primary:hover {
     background-color: #0378a9;
@@ -768,7 +773,7 @@ input.ng-invalid {
   padding: .5em;
   background-color: #ffc40d;
   border-radius: 0.1875em;
-  color: #333333; }
+  color: #333; }
 
 .select button {
   border-radius: .45em; }
@@ -777,7 +782,7 @@ input.ng-invalid {
 .select .select-dropdown {
   border-radius: .3em;
   position: absolute;
-  background: white;
+  background: #fff;
   border: 0.1em solid #c4c4c4; }
   .select .select-dropdown:after, .select .select-dropdown:before {
     bottom: 100%;
@@ -789,7 +794,7 @@ input.ng-invalid {
     pointer-events: none; }
   .select .select-dropdown:after {
     border-color: rgba(119, 100, 213, 0);
-    border-bottom-color: white;
+    border-bottom-color: #fff;
     border-width: 0.5em;
     left: 50%;
     margin-left: -0.5em;
@@ -801,15 +806,19 @@ input.ng-invalid {
     left: 50%;
     margin-left: -0.5em;
     z-index: 2; }
+  .select .select-dropdown button:first-child {
+    border-radius: .2em .2em 0 0; }
+  .select .select-dropdown button:last-child {
+    border-radius: 0 0 .2em .2em; }
 
 button {
   background-color: #049cdb;
-  color: white; }
+  color: #fff; }
   button:hover {
     background-color: #0378a9;
     color: #e6e6e6; }
   button.secondary {
-    background-color: #333333; }
+    background-color: #333; }
     button.secondary:hover {
       background-color: #1a1a1a; }
 
@@ -831,6 +840,12 @@ button {
   .main-content-list.filter-2,
   .top-filter.filter-2 {
     min-width: 60em; }
+    .main-content-list.filter-2 .select button span,
+    .top-filter.filter-2 .select button span {
+      max-width: 6.66667em; }
+    .main-content-list.filter-2 .select button.active span,
+    .top-filter.filter-2 .select button.active span {
+      min-width: 6.66667em; }
 
   .top-filter.filter-2 .filters > i {
     display: inline-block; }
@@ -838,11 +853,7 @@ button {
       margin: 0.55556em -0.25em 0 0.25em; }
   .top-filter.filter-2 .filters > span {
     width: 0;
-    opacity: 0; }
-  .top-filter.filter-2 .select button span {
-    max-width: 6.66667em; }
-  .top-filter.filter-2 .select button.active span {
-    min-width: 6.66667em; } }
+    opacity: 0; } }
 div.layout > header .title {
   padding-right: 0.66667em; }
   div.layout > header .title:after {
@@ -981,3 +992,5 @@ input.ng-invalid {
   transition: opacity cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.4s, max-height cubic-bezier(0, 0.6, 0.85, 1) 0.3s; }
   .main-content-list > li.cl > ul li.cl > ul.expand {
     max-height: 1000px; }
+
+/*# sourceMappingURL=main.css.map */
